--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,9 +1,18 @@
+@use "sass:map";
 @use "./breakpoints" as *;
 
 @mixin mq($key) {
   $size: map.get($breakpoints, $key);
 
   @media only screen and (min-width: $size) {
+    @content;
+  }
+}
+
+@mixin mq-max($key) {
+  $size: map.get($breakpoints, $key);
+
+  @media only screen and (max-width: $size) {
     @content;
   }
 }
