--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,13 +1,32 @@
+@use "../abstracts" as *;
+
 html {
   // make 1rem equal 10px
   font-size: 62.5%;
 }
 
 body {
+  background-color: var(--bg-2);
   overflow-x: hidden;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+section {
+  padding-top: 3.2rem;
+  padding-bottom: 3.2rem;
+
+  @include mq(small) {
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+  }
+}
+
+ul,
+ol {
+  padding: 0;
+  margin: 0;
 }
